Fix styling on root for items too large for the screen

--- a/src/components/Entry/MacroList.module.css
+++ b/src/components/Entry/MacroList.module.css
@@ -13,3 +13,9 @@
     margin-bottom: .5rem;
     font-size: 2rem;
 }
+
+@media only screen and (max-width: 768px) {
+    .macros div>h1 {
+        font-size: 1.25rem;
+    }
+}
